--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.2",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "mongodb": "^3.1.10",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.2",
