--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "webpack",
     "dev": "webpack-dev-server --open",
     "test-connect": "babel-node src/server/connect-db",
-    "initialize": "babel-node src/server/initialize-db"
+    "initialize": "babel-node src/server/initialize-db",
+    "server": "babel-node src/server/server"
   },
   "keywords": [],
   "author": "",
