--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "webpack-dev-server --open",
     "test-connect": "babel-node src/server/connect-db",
     "initialize": "babel-node src/server/initialize-db",
-    "server": "babel-node src/server/server"
+    "server": "babel-node src/server/server",
+    "server-test": "babel-node src/server/server.spec"
   },
   "keywords": [],
   "author": "",
