--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.2",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.0.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongodb": "^3.1.10",
