--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test-connect": "babel-node src/server/connect-db",
     "initialize": "babel-node src/server/initialize-db",
     "server": "babel-node src/server/server",
-    "server-test": "babel-node src/server/server.spec"
+    "server-test": "babel-node src/server/server.spec",
+    "start-dev": "concurrently \"npm run server \" \"npm run dev \" "
   },
   "keywords": [],
   "author": "",
