--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "@babel/core": "^7.0.0",
     "@babel/node": "^7.0.0",
     "history": "^4.7.2",
     "md5": "^2.2.1",
