--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "axios": "^0.18.0",
     "@babel/core": "^7.0.0",
     "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "history": "^4.7.2",
     "md5": "^2.2.1",
     "react": "^16.4.2",
