--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "babel-loader": "^8.0.2",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
-    "webpack": "^4.17.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.7"
   },
@@ -50,6 +49,8 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.2",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "webpack": "^4.17.2"
+
   }
 }
